Strona O nas + strona kontakt

--- a/SBD_Project/SBD_Project/Views/Home/About.cshtml
+++ b/SBD_Project/SBD_Project/Views/Home/About.cshtml
@@ -1,7 +1,74 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = " O nas";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="row my-jumbotron">
+    <div class="col-md-3" style="text-align: center">
+        <p>
+            <h2>
+                <img src="~/IMG/offer.png" height="75px"/>
+                <p>
+                Oferta
+                    </p>
+            </h2>
+        </p>
+    </div>
+    <div class="col-md-7" style="text-align: justify">
+        
+        <p>
+            Oferujemy usługi kurierskie, świadcząc kompleksową obsługę w zakresie transportu krajowego,
+            jak i zagranicznego dla klientów indywidualnych, firm i instytucji,
+            bez konieczności podpisywania umowy z innymi firmami.
+            Duży zakres realizowanych świadczeń pozwala nam dostarczać przesyłki kurierskie w formie kopertowej,
+            paczek, palet – w usłudze standard, pobranie, oraz przy zdefiniowanym terminie doręczenia.
+            Zapewniamy atrakcyjne warunki współpracy, zapewniając zawsze niskie ceny – dużo bardziej konkurencyjne niż tradycyjne firmy kurierskie. 
+            Gwarantujemy szybką oraz bezpieczną realizację powierzonych nam zleceń.
+        </p>
+
+    </div>
+</div>
+
+<div class="row my-jumbotron">
+    <div class="col-md-3" style="text-align: center">
+        <p style="text-align: center">
+            <h2>
+                <img src="~/IMG/security1.png" height="75px" />
+        <p>
+            Bezpieczeństwo
+        </p>
+            </h2>
+        </p>
+    </div>
+    <div class="col-md-7" style="text-align: justify">
+
+        <p>
+            LHD jako pierwszy globalny przewoźnik utworzył wewnętrzny departament bezpieczeństwa o zasięgu światowym. Jako jedni z pierwszych otrzymaliśmy również certyfikat od władz USA, potwierdzający udział naszej firmy w „Inicjatywie partnerstwa branży handlowej i celnej przeciw terroryzmowi” (C-TPAT). Wiele stosowanych przez nas procedur operacyjnych zostało uznanych za „C-TPAT best practices”.
+            Dysponujemy globalnym centrum operacyjnym oraz najbardziej rozległą siecią lokalizacji, liczącą ponad 100 ściśle chronionych placówek. Spełniamy dzięki temu nadzwyczajne wymogi w zakresie bezpieczeństwa fizycznego i operacyjnego. Dodatkowo zapewniamy błyskawiczną komunikację z lokalnymi i międzynarodowymi instytucjami, pilnującymi przestrzegania prawa. Korzystamy też z najnowszych programów.
+        </p>
+
+    </div>
+</div>
+
+<div class="row my-jumbotron">
+    <div class="col-md-3" style="text-align: center">
+        <p style="text-align: center">
+            <h2>
+                <img src="~/IMG/fast.png" height="75px" />
+        <p>
+        Szybkość
+        </p>
+        </h2>
+        </p>
+    </div>
+    <div class="col-md-7" style="text-align: justify">
+
+        <p>
+            Przesyłka ekspresowa – tutaj dla LHD najważniejsze są szybkość i punktualność.
+            Krajowa przesyłka ekspresowa jest zawsze połączona z jedną z usług TimeDefiniteServices. To Nadawca decyduje o tym, czy paczka zostanie doręczona przed 10.00 lub 12.00 w następnym dniu roboczym. 
+            Dostępna jest także dostawa przesyłek ekspresowych w sobotę.
+            Jeśli paczka nie dotrze na czas, koszty usługi zostaną zwrócone. 
+            Twoje korzyści to: usługi kurierskie i ekspres od jednego dostawcy.
+        </p>
+
+    </div>
+</div>
