--- a/SBD_Project/SBD_Project/Views/Home/Contact.cshtml
+++ b/SBD_Project/SBD_Project/Views/Home/Contact.cshtml
@@ -1,17 +1,82 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Kontakt";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="row my-jumbotron">
+    <div class="col-md-3" style="text-align: center">
+        <p>
+            <h2>
+                <img src="~/IMG/addres.png" height="85px"/>
+                <p>
+                    Adres Firmy
+                </p>
+            </h2>
+        </p>
+    </div>
+    <div class="col-md-7" style="text-align: justify">
+
+        <p>
+            <strong>
+                <address>
+                    LHD SPz.o.o.<br />
+                    Białystok, 15-025<br />
+                    ul.Webowa 17<br />
+                </address>
+            </strong>
+        </p>
+
+    </div>
+</div>
+
+<div class="row my-jumbotron">
+    <div class="col-md-3" style="text-align: center">
+        <p>
+            <h2>
+                <img src="~/IMG/email.png" height="85px"/>
+                <p>
+                    Email
+                </p>
+            </h2>
+        </p>
+    </div>
+    <div class="col-md-7" style="text-align: justify">
+
+        <p>
+            <address>
+                <strong>Kontakt z administartorem:</strong>   <a href="mailto:admin@lhd.com">admin@lhd.com</a><br />
+                <strong>Kontakt z działem obsługi firm:</strong> <a href="mailto:obslugaFirm@lhd.com">obslugaFirm@lhd.com</a>
+            </address>
+        </p>
+
+    </div>
+</div>
+
+<div class="row my-jumbotron">
+    <div class="col-md-3" style="text-align: center">
+        <p>
+            <h2>
+                <img src="~/IMG/phone.png" height="85px" />
+        <p>
+            Telefon
+        </p>
+        </h2>
+        </p>
+    </div>
+    <div class="col-md-7" style="text-align: justify">
+        <strong>
+            <p>
+                <abbr>Dział obsługi klienta: 50623232 </abbr>
+            </p>
+            <p>
+                <abbr>Dział obsługi firm:    50623233</abbr>
+            </p>
+            <p>
+                <abbr>Informacja: 50623234</abbr>
+            </p>
+        </strong>
+
+    </div>
+</div>
+
