Kariera z dwoma ogloszeniami :)

--- a/SBD_Project/SBD_Project/Views/Home/Index.cshtml
+++ b/SBD_Project/SBD_Project/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
         <p>
             <h2>
                 <img src="~/IMG/driver.png" height="65px" />
-                <a href=@Url.Action("IndexAdmin", "Home")>
+                <a href=@Url.Action("Career", "Home")>
                     Kariera
                 </a>
             </h2>
