--- a/SBD_Project/SBD_Project/Views/Home/IndexAdmin.cshtml
+++ b/SBD_Project/SBD_Project/Views/Home/IndexAdmin.cshtml
@@ -7,7 +7,7 @@
     <p class="lead">Witaj w panelu administaracyjnym przeznaczonym dla administratora. Z tego miejsca masz możliwość przyznawania kontroli dostępu dla poszczególnych pracowników oraz możliwość czuwania nad bezawaryjną pracą systemu.</p>
 </div>
 
-<div class="row">
+<div class="my-row">
     <div class="col-md-4">
         <p>
             <h2>
@@ -17,7 +17,7 @@
                 </a>
             </h2>
         </p>
-        <p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">
             Kontrola nad cennikiem paczki w zależności od jej wagi. Informacje zawarte w cenniku wykorzystywane, są do obliczenia ceny końcowej nadania paczki przez klienta.
         </p>
 
@@ -31,7 +31,7 @@
                 </a>
             </h2>
         </p>
-        <p>Wszelkie informacje o zatrudnionych kierowcach w firmie.</p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">Wszelkie informacje o zatrudnionych kierowcach w firmie.</p>
     </div>
     <div class="col-md-4">
         <p>
@@ -42,11 +42,11 @@
                 </a>
             </h2>
         </p>
-        <p>Baza danych klientów, którzy korzystają z usług naszej firmy.</p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">Baza danych klientów, którzy korzystają z usług naszej firmy.</p>
     </div>
 </div>
 
-<div class="row">
+<div class="my-row">
     <div class="col-md-4">
         <p>
             <h2>
@@ -56,7 +56,7 @@
                 </a>
             </h2>
         </p>
-        <p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">
             Informacje o prowadzonych naprawach samochodów oraz naprawach zaplanowanych na przyszłość.
         </p>
     </div>
@@ -69,7 +69,7 @@
                 </a>
             </h2>
         </p>
-        <p>Informacje o pracownikach biurowych zatrudnionych w firmie, możliwość usunięcia lub założenia nowego konta pracowniczego.</p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">Informacje o pracownikach biurowych zatrudnionych w firmie, możliwość usunięcia lub założenia nowego konta pracowniczego.</p>
     </div>
     <div class="col-md-4">
         <p>
@@ -80,12 +80,12 @@
                 </a>
             </h2>
         </p>
-        <p>Informacje o zaplanowanych przewozach.</p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">Informacje o zaplanowanych przewozach.</p>
 
     </div>
 </div>
 
-<div class="row">
+<div class="my-row">
     <div class="col-md-4">
         <p>
             <h2>
@@ -95,11 +95,11 @@
                 </a>
             </h2>
         </p>
-        <p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">
             Tabela zawierająca możliwe dostępne statusy realizacji zlecenia.
         </p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4" style="border-bottom: 0px">
         <p>
             <h2>
                 <img src="~/IMG/truck-icon.png" height="65px" />
@@ -108,9 +108,9 @@
                 </a>
             </h2>
         </p>
-        <p>Spis wszystkich pojazdów w firmie, zarówno pojazdy niezbędne do utrzymania transportu oraz pojazdy pracownicze niezbędne do prawidłowego funkcjonowania firmy.</p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">Spis wszystkich pojazdów w firmie, zarówno pojazdy niezbędne do utrzymania transportu oraz pojazdy pracownicze niezbędne do prawidłowego funkcjonowania firmy.</p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4" style="border-bottom: 0px">
         <p>
             <h2>
                 <img src="~/IMG/serwis.png" height="65px" />
@@ -119,11 +119,11 @@
                 </a>
             </h2>
         </p>
-        <p>Informacje o zaprzyjażnionych serwisach z którymi firma ma podpisane umowy na serwisowanie pojazdów.</p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">Informacje o zaprzyjażnionych serwisach z którymi firma ma podpisane umowy na serwisowanie pojazdów.</p>
     </div>
 </div>
 
-<div class="row">
+<div class="my-row">
     <div class="col-md-4">
         <p>
             <h2>
@@ -133,8 +133,8 @@
                 </a>
             </h2>
         </p>
-        <p>
-            Informacje o uprawnieniach do wykonywania transportu dla danago kierowcy. 
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">
+            Informacje o uprawnieniach do wykonywania transportu dla danago kierowcy.
         </p>
     </div>
     <div class="col-md-4">
@@ -146,7 +146,7 @@
                 </a>
             </h2>
         </p>
-        <p>Informacje o zleceniach.</p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">Informacje o zleceniach.</p>
     </div>
     <div class="col-md-4">
         <p>
@@ -157,11 +157,11 @@
                 </a>
             </h2>
         </p>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">Spis wszystkich zarejestrowanych w systemie paczek.</p>
     </div>
 </div>
 
-<div class="row">
+<div class="my-row">
     <div class="col-md-4">
         <p>
             <h2>
@@ -171,7 +171,7 @@
                 </a>
             </h2>
         </p>
-        <p>
+        <p style="font-size: 16px; text-align: justify;color: #7F7460">
             Konta użytkowników systemu.
         </p>
     </div>
