--- a/SBD_Project/SBD_Project/Views/Shared/_Layout.cshtml
+++ b/SBD_Project/SBD_Project/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         <img src="~/IMG/pb_logo.jpg" style="align-content: flex-start" height="100" />
                     </p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" style="font-size: 18px; color: #7F7460;text-align: justify">
                     <p>&copy; @DateTime.Now.Year - Projekt zrealizowany na zaliczenie przedmiotu Systemy Baz Danych, wykonany przez Marcin Kozikowski i Marcin Januszewski 2016r.</p>
                 </div>
                 <div class="col-md-3">
