--- a/SBD_Project/SBD_Project/Views/Uzytkownik/Edit.cshtml
+++ b/SBD_Project/SBD_Project/Views/Uzytkownik/Edit.cshtml
@@ -26,13 +26,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Hasło, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Hasło, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Hasło, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Typ, htmlAttributes: new { @class = "control-label col-md-2" })
