--- a/SBD_Project/SBD_Project/Views/Kierowcas/Edit.cshtml
+++ b/SBD_Project/SBD_Project/Views/Kierowcas/Edit.cshtml
@@ -91,7 +91,8 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @*@Html.ActionLink("Back to List", "Index")*@
+    <a href="javascript:void(0);" onclick="history.go(-1);">Go back</a>
 </div>
 
 @section Scripts {
