--- a/SBD_Project/SBD_Project/Views/Uprawnienia/Create.cshtml
+++ b/SBD_Project/SBD_Project/Views/Uprawnienia/Create.cshtml
@@ -17,7 +17,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.FK_Kierowca, "FK_Kierowca", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FK_Kierowca, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("FK_Kierowca", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FK_Kierowca, "", new { @class = "text-danger" })
