--- a/SBD_Project/SBD_Project/Views/Uzytkownik/Create.cshtml
+++ b/SBD_Project/SBD_Project/Views/Uzytkownik/Create.cshtml
@@ -25,10 +25,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Hasło, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Hasło, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Hasło, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Hasło, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Hasło, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.Hasło, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.PotwierdzHaslo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PotwierdzHaslo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PotwierdzHaslo, "", new { @class = "text-danger" })
             </div>
         </div>
 
