Kierowca moze dodawac uprawnienia, edytowac i usuwac swoje.
TODO: Przewozy

--- a/SBD_Project/SBD_Project/Views/Uprawnienia/Delete.cshtml
+++ b/SBD_Project/SBD_Project/Views/Uprawnienia/Delete.cshtml
@@ -59,7 +59,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <a href="javascript:void(0);" onclick="history.go(-1);">Go back</a>
         </div>
     }
 </div>
