--- a/SBD_Project/SBD_Project/Views/Uprawnienia/Details.cshtml
+++ b/SBD_Project/SBD_Project/Views/Uprawnienia/Details.cshtml
@@ -55,5 +55,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    <a href="javascript:void(0);" onclick="history.go(-1);">Go back</a>
 </p>
