--- a/SBD_Project/SBD_Project/Views/Uprawnienia/Edit.cshtml
+++ b/SBD_Project/SBD_Project/Views/Uprawnienia/Edit.cshtml
@@ -67,7 +67,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <a href="javascript:void(0);" onclick="history.go(-1);">Go back</a>
 </div>
 
 @section Scripts {
