--- a/SBD_Project/SBD_Project/Views/Uprawnienia/CreateByUser.cshtml
+++ b/SBD_Project/SBD_Project/Views/Uprawnienia/CreateByUser.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SBD_Project.Models.Uprawnienia
 
 @{
-    ViewBag.Title = "MyCreate";
+    ViewBag.Title = "CreateByUser";
 }
 
-<h2>MyCreate</h2>
+<h2>CreateByUser</h2>
 
 
 @using (Html.BeginForm()) 
@@ -15,13 +15,6 @@
         <h4>Uprawnienia</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.FK_Kierowca, "FK_Kierowca", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.Label("FK_Kierowca", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.FK_Kierowca, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.NumerUprawnienia, htmlAttributes: new { @class = "control-label col-md-2" })
