problem z utworzeniem nowego pracownika nie chce zapisac do bazy danych

--- a/SBD_Project/SBD_Project/Views/Home/IndexDriver.cshtml
+++ b/SBD_Project/SBD_Project/Views/Home/IndexDriver.cshtml
@@ -5,7 +5,7 @@
 
 <div class="my-jumbotron">
     <h2>Witaj !</h2>
-    <p class="lead">Witaj w panelu administaracyjnym przeznaczonym dla kierowcy LHD. 
+    <p class="lead">Witaj @User.Identity.GetUserName() ! w panelu administaracyjnym przeznaczonym dla kierowcy LHD. 
     Z tego miejsca masz możliwość przeglądania planu najbliższych przewozów oraz zarządzania informacjami o posiadanych uprawnieniach.</p>
 </div>
 
