--- a/SBD_Project/SBD_Project/Views/Home/IndexAdmin.cshtml
+++ b/SBD_Project/SBD_Project/Views/Home/IndexAdmin.cshtml
@@ -1,10 +1,11 @@
-﻿@{
+﻿@using Microsoft.AspNet.Identity
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="my-jumbotron">
     <h2>Witaj !</h2>
-    <p class="lead">Witaj w panelu administaracyjnym przeznaczonym dla administratora. Z tego miejsca masz możliwość przyznawania kontroli dostępu dla poszczególnych pracowników oraz możliwość czuwania nad bezawaryjną pracą systemu.</p>
+    <p class="lead">Witaj @User.Identity.GetUserName() ! w panelu administaracyjnym przeznaczonym dla administratora. Z tego miejsca masz możliwość przyznawania kontroli dostępu dla poszczególnych pracowników oraz możliwość czuwania nad bezawaryjną pracą systemu.</p>
 </div>
 
 <div class="my-row">
