--- a/SBD_Project/SBD_Project/Views/Pracownik/Delete.cshtml
+++ b/SBD_Project/SBD_Project/Views/Pracownik/Delete.cshtml
@@ -29,6 +29,54 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.KodPocztowy)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.KodPocztowy)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Miasto)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Miasto)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Ulica)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Ulica)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.NumerDomu)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NumerDomu)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.NumerMieszkania)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NumerMieszkania)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Telefon)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Telefon)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Uzytkownik.Login)
         </dt>
 
