--- a/SBD_Project/SBD_Project/Views/Home/IndexDriver.cshtml
+++ b/SBD_Project/SBD_Project/Views/Home/IndexDriver.cshtml
@@ -64,7 +64,7 @@
     <div class="col-md-4">
         <p>
             <h2>
-                <a href=@Url.Action("Index", "Kierowcas")>
+                <a href=@Url.Action("DriversIndex", "Przewoz", new {id = User.Identity.GetUserId()})>
                     Przewozy
                 </a>
             </h2>
