Zmiany w createNewPack dodanie zlecenia

--- a/SBD_Project/SBD_Project/Views/Paczka/CreateNewPack.cshtml
+++ b/SBD_Project/SBD_Project/Views/Paczka/CreateNewPack.cshtml
@@ -257,10 +257,10 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title" style="font-size: 20px;color: #7F7460">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Dane Nadawcy</a>
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Informacje o transporcie</a>
                     </h4>
                 </div>
-                <div id="collapse3" class="panel-collapse collapse">
+                <div id="collapse4" class="panel-collapse collapse">
                     <div class="panel-body" style="background-color: #fbe9d4">
                         @*Informacja o transporcie*@
                         <div class="my-row">
